--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "moulinette",
   "version": "1.0.0",
   "description": "Moulinette ==========",
-  "main": "./PDB/interfaceResidues.js",
+  "main": "readme.md",
   "scripts": {
-    "start": "./PDB/interfaceResidues.js",
     "watch": "nodemon"
   },
   "repository": {
@@ -19,6 +18,7 @@
   },
   "homepage": "https://github.com/ThibWeb/moulinette#readme",
   "dependencies": {
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "yargs": "^4.7.1"
   }
 }
