--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
 - '2.7'
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y pymol
+  - sudo apt-get install -y subversion build-essential python-dev python-pmw libglew-dev freeglut3-dev libpng-dev libfreetype6-dev libxml2-dev
+  - ./bin/pymol-install.sh
 before_script:
   - which pymol
   - PYMOL_PATH=$(which pymol)
